fix program name substitution in man page
While ArgParse correctly substitues the program name in help text,
argprse-manpage doesn't seem to respect that. Simply do our own
replacement.

--- a/docs/osm2pgsql-replication.1
+++ b/docs/osm2pgsql-replication.1
@@ -52,7 +52,7 @@ from a file that contains replication source information, then the
 .br
 initialisation process can use this and set up replication from there.
 .br
-Use the command \(cq%(prog)s \-\-osm\-file <filename>\(cq for this.
+Use the command \(cqosm2pgsql-replication \-\-osm\-file <filename>\(cq for this.
 .br
 
 .br
